<resources>
    <string name="app_name">Client_taxigo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sex">性別</string>
    <string name="help">聯絡客服</string>
    <string name="name">name</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="email">email(optional)</string>
    <string name="provide_profile">提供乘客姓名電話給司機</string>
    <string name="cleanall">全部清除</string>
    <string name="ok_for_signup">確認註冊</string>
    <string name="start_location">上車地點:</string>
    <string name="X">XXX</string>
</resources>
