<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.licky.client_taxigo.SignupActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:layout_weight="0.03"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="0.06"
                android:contentDescription=""
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription,InefficientWeight,NestedWeights,RtlHardcoded" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/name"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1"
            tools:ignore="InefficientWeight"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:layout_width="108dp"
                android:layout_height="299dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="性別"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/account"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/password"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/confirm_password"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/prompt_email"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="DuplicateIds">

                <RadioGroup
                    android:id="@+id/radioGroupID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/maie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/male"
                        tools:ignore="RtlHardcoded" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/female"
                        tools:ignore="RtlHardcoded" />

                </RadioGroup>

                <AutoCompleteTextView
                    android:id="@+id/account_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="5dp"
                    android:hint="@android:string/emptyPhoneNumber"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="2dp"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/confirm_pd_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="13dp"
                    android:hint="@string/confirm_password"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/provide_profile"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clean_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/cleanall"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:id="@+id/ok_for_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_weight="1"
                android:text="@string/ok_for_signup"
                tools:ignore="ButtonStyle,RtlHardcoded" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ad_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="@dimen/fab_margin"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
